--- a/banco-integrado-api/cliente-web/index.html
+++ b/banco-integrado-api/cliente-web/index.html
@@ -23,6 +23,7 @@
     <div id="input-container">
         <input type="text" id="idCliente" placeholder="Digite o ID do Cliente (ex: 123)">
         <button id="buscarBtn">Buscar Cliente</button>
+        <button id="relatorioBtn">Gerar Relatório</button>
     </div>
 
     <h2>Resultado da API:</h2>
